# first_try_landed

./: .pre-commit-config.yaml  Gemfile  README.md  _config.yml  about.md  categories.md  index.md  posts.md  pyproject.toml
.github/workflows/: 0-welcome.yml  jekyll.yml
LearnFP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_posts/: 2024-02-25-testfile.md  2025-10-01-getting-fluent-in-python.md  notes_data_model.py
django_agent.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
